[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hivelink"
version = "0.1.0"
description = "Cross-platform distributed LLM inference — pool Mac, Windows, Linux, NVIDIA, AMD, and Apple Silicon into one AI cluster"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "inference", "distributed", "ai", "nvidia", "cuda", "metal", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "psutil>=6.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
    "huggingface-hub>=0.23.0",
]

[project.optional-dependencies]
nvidia = ["nvidia-ml-py>=12.0.0"]
amd   = ["pyamdgpuinfo>=2.1.0"]
dev   = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27.0"]

[project.urls]
Homepage   = "https://github.com/Kikobuf/hivelink"
Repository = "https://github.com/Kikobuf/hivelink"
Issues     = "https://github.com/Kikobuf/hivelink/issues"

[project.scripts]
hivelink = "hivelink.cli:app"

[tool.setuptools.packages.find]
where   = ["."]
include = ["hivelink*"]

[tool.setuptools.package-data]
hivelink = ["../dashboard/index.html"]
